manifests/envs/stg/web-front-admision-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-stg-front-admision-ingress
  annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt
       nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
      - stg.salud.achs.cl
      secretName: admision-web-cert
  rules:
  - host: stg.salud.achs.cl 
    http:
      paths:
      - path: /web-admision(/?.*)
        backend:
          serviceName: web-stg-front-admision-service
          servicePort: 80
      - path: /web-firmadigital(/?.*)
        backend:
          serviceName: web-stg-front-firmadigital-service
          servicePort: 80 
       - path: /web-firmadigital-totem(/?.*)
        backend:
          serviceName: web-stg-front-firmadigital-totem
          servicePort: 80            
      - path: /web-digitalizador-documentos(/?.*)
        backend:
          serviceName: web-stg-front-digitalizaciondocumentos-service
          servicePort: 80   
      - path: /orquestador/(.*)
        backend:
          serviceName: api-stg-orquestador-service
          servicePort: 80
